# Sentinel-Alpha

./: .coveragerc  .env.example  .gitignore  LICENSE  README.md  pytest.ini  requirements.txt
docs/: README.md
forexfactory-mcp/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
functions/: __init__.py  agents.py  constants.py
interface/: app.py
logs/: compliance_audit.jsonl
scripts/: README.md  archive_logs_to_r2.py  backfill_indicators.py  failed_macro_results.json  macro_baselines_cli.py  macro_ingestion_cli.py  macro_scheduler_cli.py  news_sentiment_cli.py  (+5 more)
src/forexfactory-mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/forexfactory-mcp/client_configs/claude/: claude_desktop_config.json
src/forexfactory-mcp/client_configs/vscode/: mcp_dev_stdio.json  mcp_docker_stdio.json
src/forexfactory-mcp/docs/: CLIENT_CONFIG_REFERENCE.md
src/forexfactory-mcp/examples/: client.py
src/forexfactory-mcp/src/forexfactory_mcp/: server.py  settings.py
src/forexfactory-mcp/src/forexfactory_mcp/models/: event.py  time_period.py
src/forexfactory-mcp/src/forexfactory_mcp/prompts/: cross_asset_radar.py  daily_prep.py  weekly_outlook.py  weekly_outlook_next_week.py
src/forexfactory-mcp/src/forexfactory_mcp/resources/: resource_manager.py
src/forexfactory-mcp/src/forexfactory_mcp/services/: ff_scraper_service.py
src/forexfactory-mcp/src/forexfactory_mcp/tools/: get_calendar_tool.py  tools_manager.py
src/forexfactory-mcp/src/forexfactory_mcp/utils/: event_utils.py
(+112 files in other folders)
